--- a/ime-application/pom.xml
+++ b/ime-application/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
         <ime-domain.version>0.0.1-SNAPSHOT</ime-domain.version>
+        <sping-boot.version>2.2.2.RELEASE</sping-boot.version>
     </properties>
 
     <dependencies>
@@ -17,6 +18,12 @@
             <groupId>pers.wangjun</groupId>
             <artifactId>ime-domain</artifactId>
             <version>${ime-domain.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${sping-boot.version}</version>
         </dependency>
     </dependencies>
 
