--- a/ime-persistence/pom.xml
+++ b/ime-persistence/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
         <ime-application.version>0.0.1-SNAPSHOT</ime-application.version>
+        <sping-boot.version>2.2.2.RELEASE</sping-boot.version>
     </properties>
 
     <dependencies>
@@ -18,5 +19,18 @@
             <artifactId>ime-application</artifactId>
             <version>${ime-application.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${sping-boot.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${sping-boot.version}</version>
+        </dependency>
     </dependencies>
+
 </project>
