--- a/ime-start/src/main/resources/application.properties
+++ b/ime-start/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:file:~/.h2/DddDemo
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+server.port=8081
