--- a/ime-web/pom.xml
+++ b/ime-web/pom.xml
@@ -9,14 +9,21 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
-        <springboot.version>2.2.2.RELEASE</springboot.version>
+        <ime-application.version>0.0.1-SNAPSHOT</ime-application.version>
+        <spring-boot.version>2.2.2.RELEASE</spring-boot.version>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>pers.wangjun</groupId>
+            <artifactId>ime-application</artifactId>
+            <version>${ime-application.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${springboot.version}</version>
+            <version>${spring-boot.version}</version>
         </dependency>
     </dependencies>
 
